--- a/index.html
+++ b/index.html
@@ -1,180 +1,127 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>GACOR EXPRESS</title>
-
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
-<!-- Leaflet -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-
-<meta name="theme-color" content="#1abc9c">
-
-<style>
-body{background:#f4f6f9;padding-bottom:75px}
-.banner img{max-width:100%;border-radius:12px}
-.menu-card{cursor:pointer}
-.bottom-nav{
- position:fixed;bottom:0;left:0;right:0;
- background:#fff;border-top:1px solid #ddd;
-}
-.bottom-nav a{font-size:12px;color:#555}
-.bottom-nav i{font-size:22px}
-#map{height:260px;border-radius:12px}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>OJEXY - Ojek Online</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#198754">
+  <style>
+    body{padding-bottom:70px;background:#f6f7f9}
+    .banner{display:flex;justify-content:center;margin:10px}
+    .banner img{max-width:100%;border-radius:12px}
+    .menu-card{border-radius:16px}
+    .bottom-nav{position:fixed;bottom:0;left:0;right:0;height:60px;background:#fff;border-top:1px solid #ddd;display:flex}
+    .bottom-nav a{flex:1;text-align:center;padding-top:6px;font-size:12px;color:#555;text-decoration:none}
+    .bottom-nav i{font-size:20px;display:block}
+  </style>
 </head>
+<body><div class="container">
+  <h4 class="mt-3">OJEXY</h4>  <div class="banner">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijvQWrMotbzVppCxgv1YTqOcGuT3ZM4QrhljQ5TqxCKjYiu8bHlzNvySFMT5hoeol8EPnIp2EMGnwZa5YIMORbyeC5H3YoO0_2RFXYbetZQL-zIfPcpC-l4fMvD_e5KJT9Qc2F_k01Tv9mX12j1Km96Ll3oYH5CrhfGwbymFb3dkH_63ED_T3A1DUnK3s/s320/IMG_20260117_100108.jpg" alt="Banner">
+  </div>  <div class="row g-3 mt-2">
+    <div class="col-4">
+      <div class="card menu-card text-center p-3" onclick="openOrder('Ojek Online')">
+        <i class="bi bi-bicycle fs-1 text-success"></i>
+        <div>Ojek</div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card menu-card text-center p-3" onclick="openOrder('Food Delivery')">
+        <i class="bi bi-bag-heart fs-1 text-danger"></i>
+        <div>Food</div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card menu-card text-center p-3" onclick="openOrder('Jastip')">
+        <i class="bi bi-box-seam fs-1 text-primary"></i>
+        <div>Jastip</div>
+      </div>
+    </div>
+  </div>
+</div><!-- Modal Order --><div class="modal fade" id="orderModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Pesan Layanan</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input type="text" id="nama" class="form-control mb-2" placeholder="Nama Pemesan">
+        <input type="text" id="layanan" class="form-control mb-2" readonly>
+        <button class="btn btn-outline-success w-100 mb-2" onclick="getLocation()">Ambil Lokasi Jemput</button>
+        <input type="text" id="jemput" class="form-control mb-2" placeholder="Lokasi Jemput" readonly>
+        <input type="text" id="antar" class="form-control mb-2" placeholder="Lokasi Antar (alamat)">
+        <input type="text" id="tarif" class="form-control mb-2" placeholder="Tarif" readonly>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-success w-100" onclick="kirimWA()">Kirim Pesanan</button>
+      </div>
+    </div>
+  </div>
+</div><!-- Bottom Nav --><div class="bottom-nav">
+  <a href="#"><i class="bi bi-house"></i>Home</a>
+  <a href="https://wa.me/6282154306353"><i class="bi bi-question-circle"></i>Tanya</a>
+  <a href="https://wa.me/6282154306353"><i class="bi bi-chat"></i>Admin</a>
+</div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script><script>
+let modal = new bootstrap.Modal(document.getElementById('orderModal'));
+let latJemput, lonJemput;
 
-<body>
-
-<div class="container mt-3">
-<h4 class="text-center fw-bold">GACOR EXPRESS</h4>
-<p class="text-center text-muted">Layanan Antar Jemput & Makanan</p>
-
-<!-- Banner -->
-<div class="text-center mb-3 banner">
-<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijvQWrMotbzVppCxgv1YTqOcGuT3ZM4QrhljQ5TqxCKjYiu8bHlzNvySFMT5hoeol8EPnIp2EMGnwZa5YIMORbyeC5H3YoO0_2RFXYbetZQL-zIfPcpC-l4fMvD_e5KJT9Qc2F_k01Tv9mX12j1Km96Ll3oYH5CrhfGwbymFb3dkH_63ED_T3A1DUnK3s/s320/IMG_20260117_100108.jpg">
-</div>
-
-<!-- Menu -->
-<div class="row g-3 text-center">
-<div class="col-4">
-<div class="card menu-card" onclick="openOrder('Ojek Online')">
-<div class="card-body">
-<i class="bi bi-bicycle text-success"></i>
-<p>Ojek</p>
-</div>
-</div>
-</div>
-
-<div class="col-4">
-<div class="card menu-card" onclick="openOrder('Food Delivery')">
-<div class="card-body">
-<i class="bi bi-bag-heart text-danger"></i>
-<p>Food</p>
-</div>
-</div>
-</div>
-
-<div class="col-4">
-<div class="card menu-card" onclick="openOrder('Jastip')">
-<div class="card-body">
-<i class="bi bi-box-seam text-primary"></i>
-<p>Jastip</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="orderModal">
-<div class="modal-dialog modal-lg">
-<div class="modal-content">
-<div class="modal-header">
-<h5>Form Pemesanan</h5>
-<button class="btn-close" data-bs-dismiss="modal"></button>
-</div>
-
-<div class="modal-body">
-<input id="nama" class="form-control mb-2" placeholder="Nama Pemesan">
-<input id="layanan" class="form-control mb-2" readonly>
-
-<button class="btn btn-outline-success w-100 mb-2" onclick="getLocation()">
-📍 Ambil Lokasi Jemput
-</button>
-
-<small class="text-muted">Klik peta untuk menentukan titik antar</small>
-<div id="map" class="my-2"></div>
-
-<p class="fw-bold">Tarif: Rp <span id="tarif">0</span></p>
-
-<button class="btn btn-success w-100" onclick="sendWA()">Kirim Pesanan</button>
-</div>
-</div>
-</div>
-</div>
-
-<!-- Bottom Nav -->
-<div class="bottom-nav d-flex justify-content-around py-2 text-center">
-<a href="#"><i class="bi bi-house"></i><br>Home</a>
-<a href="https://wa.me/6282154306353"><i class="bi bi-question-circle"></i><br>Tanya</a>
-<a href="https://wa.me/6282154306353"><i class="bi bi-chat-dots"></i><br>Admin</a>
-</div>
-
-<!-- JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-<script>
-let map, jemputMarker, antarMarker, line;
-let jemputLatLng, antarLatLng;
-
-function openOrder(service){
- document.getElementById('layanan').value = service;
- new bootstrap.Modal(orderModal).show();
+function openOrder(layanan){
+  document.getElementById('layanan').value = layanan;
+  modal.show();
 }
 
 function getLocation(){
- navigator.geolocation.getCurrentPosition(pos=>{
-   jemputLatLng=[pos.coords.latitude,pos.coords.longitude];
-
-   map=L.map('map').setView(jemputLatLng,15);
-   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-   jemputMarker=L.marker(jemputLatLng).addTo(map).bindPopup("📍 Jemput").openPopup();
-
-   map.on('click',e=>{
-     setAntar(e.latlng);
-   });
- });
+  navigator.geolocation.getCurrentPosition(pos=>{
+    latJemput = pos.coords.latitude;
+    lonJemput = pos.coords.longitude;
+    document.getElementById('jemput').value = latJemput+','+lonJemput;
+  });
 }
 
-function setAntar(latlng){
- antarLatLng=[latlng.lat,latlng.lng];
-
- if(antarMarker) map.removeLayer(antarMarker);
- if(line) map.removeLayer(line);
-
- antarMarker=L.marker(antarLatLng).addTo(map).bindPopup("📍 Antar").openPopup();
- line=L.polyline([jemputLatLng,antarLatLng]).addTo(map);
-
- hitungTarif();
+async function hitungTarif(lat2, lon2){
+  const url = `https://router.project-osrm.org/route/v1/driving/${lonJemput},${latJemput};${lon2},${lat2}?overview=false`;
+  const res = await fetch(url);
+  const data = await res.json();
+  const km = data.routes[0].distance/1000;
+  let tarif = 9000;
+  if(km > 1){
+    let extra = Math.ceil((km-1)*1000/1000)*1000;
+    tarif += extra;
+  }
+  document.getElementById('tarif').value = 'Rp '+tarif;
+  return tarif;
 }
 
-function hitungTarif(){
- let jarak=map.distance(jemputLatLng,antarLatLng)/1000;
- let tarif=9000;
+async function kirimWA(){
+  const nama = document.getElementById('nama').value;
+  const layanan = document.getElementById('layanan').value;
+  const antar = document.getElementById('antar').value;
 
- if(jarak>1){
-   let extra=(jarak-1)*1000;
-   extra=extra<500?1000:Math.round(extra/1000)*1000;
-   tarif+=extra;
- }
- document.getElementById("tarif").innerText=tarif.toLocaleString();
+  const geo = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${antar}`);
+  const g = await geo.json();
+  const lat2 = g[0].lat;
+  const lon2 = g[0].lon;
+  const tarif = await hitungTarif(lat2, lon2);
+
+  const mapsUrl = `https://www.openstreetmap.org/directions?engine=fossgis_osrm_car&route=${latJemput},${lonJemput};${lat2},${lon2}`;
+
+  const text = `Pesanan OJEXY%0A
+Nama: ${nama}%0A
+Layanan: ${layanan}%0A
+Jemput: ${latJemput},${lonJemput}%0A
+Antar: ${antar}%0A
+Tarif: Rp ${tarif}%0A
+Maps: ${mapsUrl}`;
+
+  window.location.href = `https://wa.me/6282154306353?text=${text}`;
 }
 
-function sendWA(){
- let nama=nama.value;
- let layanan=layanan.value;
- let tarif=document.getElementById("tarif").innerText;
-
- let jemput=`https://www.openstreetmap.org/?mlat=${jemputLatLng[0]}&mlon=${jemputLatLng[1]}`;
- let antar=`https://www.openstreetmap.org/?mlat=${antarLatLng[0]}&mlon=${antarLatLng[1]}`;
-
- let text=`Pesanan GACOR EXPRESS
-Nama: ${nama}
-Layanan: ${layanan}
-Tarif: Rp ${tarif}
-Maps Jemput: ${jemput}
-Maps Antar: ${antar}`;
-
- window.open(`https://wa.me/6282154306353?text=${encodeURIComponent(text)}`);
+// PWA
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('sw.js');
 }
-</script>
-
-</body>
- </html>
+</script></body>
+</html>
